# py-notifier

./: .gitignore  README.md  pyproject.toml
notifier/: __init__.py  notifier.py
