[tool.poetry]
name = "notifier"
version = "0.1.0"
description = ""
authors = ["peacemo <carlchenxq@qq.com>"]
readme = "README.md"
packages = [{include = "notifier"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.30.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
